se modifico endpoint lista espera qx
